# MessageNoticer

./: .gitignore  CMakeLists.txt  LICENSE.txt  MessageNoticer.sln  README.md  vcpkg.json
.github/workflows/: cmake-multi-platform.yml  msbuild.yml
MessageNoticerClient/: Client.h  ClientProcess.cpp  ClientProcess.h  Colors.h  Content.h  HandshakePacket.h  Logger.cpp  Logger.h  Message.cpp  Message.h  MessageNoticerClient.aps  MessageNoticerClient.cpp  MessageNoticerClient.rc  MessageNoticerClient.vcxproj  MessageNoticerClient.vcxproj.filters  Network.cpp  Network.h  NormalPacket.h  Packet.cpp  Packet.h  pch.cpp  pch.h  resource.h
MessageNoticerServer/: Client.h  Colors.h  Content.h  HandshakePacket.h  Logger.cpp  Logger.h  Message.cpp  Message.h  MessageNoticerServer.aps  MessageNoticerServer.cpp  MessageNoticerServer.rc  MessageNoticerServer.vcxproj  MessageNoticerServer.vcxproj.filters  Network.cpp  Network.h  NormalPacket.h  Packet.cpp  Packet.h  ServerProcess.cpp  ServerProcess.h  pch.cpp  pch.h  resource.h
